argocd/musikplayer-app/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: musikplayer
  namespace: musikplayer
spec:
  selector:
    app: musikplayer
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
